--- a/index.css
+++ b/index.css
@@ -238,10 +238,12 @@ header > nav > img {
 }
 
 .home-buttons {
+    display: flex;
     margin-left: 2px;
 }
 
-.home-buttons > button {
+.home-buttons > button,
+.home-buttons > a {
     font-size: 18px;
     font-weight: 600;
     width: 140px;
@@ -252,12 +254,15 @@ header > nav > img {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.home-buttons > button {
+    margin-right: 15px;
+}
+
 .home-buttons > button:nth-child(1) {
     color: #ebebeb;
     background: var(--color-primary-variant);
     border: 1px solid var(--color-primary-variant);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    margin-right: 15px;
 }
 
 .home-buttons > button:nth-child(1):hover {
@@ -275,6 +280,31 @@ header > nav > img {
 .home-buttons > button:nth-child(2):hover {
     background: var(--color-primary-variant);
     color: #fff;
+}
+
+.home-buttons > a {
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    width: auto;
+    color: #ebebeb;
+    background: var(--color-primary-variant);
+    border: 1px solid var(--color-primary-variant);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border: 0;
+}
+
+.home-buttons > a:hover {
+    background: var(--color-primary-dark);
+}
+
+.home-buttons > a > svg {
+    width: 25px;
+    margin-left: 5px;
+}
+
+.home-buttons > a > svg > path {
+    stroke: #ebebeb;
 }
 
 .home-image {
@@ -479,6 +509,130 @@ header > nav > img {
     fill: #3c873a;
 }
 
+.more-icon path {
+    stroke: var(--color-dark-variant);
+}
+
+/* about me */
+.about-me-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3rem 0;
+    width: 100%;
+    background: var(--color-white);
+}
+
+.about-me {
+    display: flex;
+    width: calc(100% - 40px);
+    max-width: 900px;
+    padding: 0 20px;
+}
+
+.about-me-text {
+    color: var(--color-dark);
+}
+
+.about-me-text > h4 {
+    font-size: 30px;
+    font-weight: 800;
+    padding-left: 10px;
+    border-left: 10px double var(--color-primary);
+}
+
+.about-me-text > h4 > b {
+    font-weight: 800;
+    color: var(--color-primary);
+}
+
+.about-me-text > p {
+    font-size: 15px;
+    font-weight: 300;
+    margin: 10px 0 1rem 0;
+}
+
+.about-me-skills {
+    color: var(--color-dark);
+    width: 100%;
+    max-width: 900px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about-me-skills > h4 {
+    font-size: 26px;
+    font-weight: 800;
+    margin: 20px 0;
+    padding: 0 10px;
+    border-left: 4px dotted var(--color-primary-dark);
+    border-right: 4px dotted var(--color-primary-dark);
+}
+
+.skills-position {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.skill-group {
+    width: 180px;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 20px;
+    text-align: start;
+}
+
+.skill-group > h5 {
+    color: var(--color-white);
+    background: var(--color-dark-variant);
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: var(--border-radius-1);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.skill-group > span {
+    font-size: 15px;
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    align-items: flex-end;
+}
+
+.skill-group > h5:hover,
+.skill-group > span:hover {
+    transform: scale(1.02);
+}
+
+.skill-group > span > svg,
+.skill-group > span > img {
+    width: 40px;
+    height: 40px;
+    margin: 0 5px;
+}
+
+.skill-group > span > b {
+    margin-bottom: 7px;
+    font-weight: 400;
+}
+
+.skill-group > span::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 70%;
+    align-self: flex-start;
+    border-left: 3px solid var(--color-dark-variant);
+    border-bottom: 3px solid var(--color-dark-variant);
+    border-radius: 0 0 0 var(--border-radius-2);
+    margin-left: 15px;
+}
+
 @media (max-width: 1024px) {
     header > nav {
         min-width: 86%;
@@ -545,6 +699,38 @@ header > nav > img {
     .projects-background-details > span {
         width: 35%;
     }
+
+    /* about me */
+    .about-me-skills > h4 {
+        font-size: 23px;
+    }
+
+    .skill-group {
+        width: 170px;
+    }
+
+    .skill-group > h5 {
+        font-size: 18px;
+    }
+
+    .skill-group > span {
+        font-size: 14px;
+        height: 50px;
+    }
+
+    .skill-group > span > svg,
+    .skill-group > span > img {
+        width: 35px;
+        height: 35px;
+    }
+
+    .skill-group > span > b {
+        margin-bottom: 5px;
+    }
+
+    .skill-group > span::before {
+        width: 25px;
+    }
 }
 
 @media (max-width: 764px) {
@@ -569,10 +755,19 @@ header > nav > img {
         margin: 0.2rem 0 0.6rem 2px;
     }
 
-    .home-buttons > button {
+    .home-buttons > button,
+    .home-buttons > a {
         font-size: 15px;
         width: 110px;
         height: 40px;
+    }
+
+    .home-buttons > button {
+        margin-right: 8px;
+    }
+
+    .home-buttons > a {
+        width: fit-content;
     }
 
     .home-image {
@@ -644,6 +839,38 @@ header > nav > img {
     }
     .projects-background-details > span {
         width: 40%;
+    }
+
+    /* about me */
+    .about-me-text > p {
+        font-size: 14px;
+    }
+
+    .about-me-skills > h4 {
+        font-size: 23px;
+    }
+
+    .skill-group > h5 {
+        font-size: 17px;
+    }
+
+    .skill-group > span {
+        font-size: 14px;
+        height: 50px;
+    }
+
+    .skill-group > span > svg,
+    .skill-group > span > img {
+        width: 35px;
+        height: 35px;
+    }
+
+    .skill-group > span > b {
+        margin-bottom: 5px;
+    }
+
+    .skill-group > span::before {
+        width: 25px;
     }
 }
 
@@ -799,7 +1026,7 @@ header > nav > img {
     }
 
     .home-content {
-        margin-bottom: 0;
+        margin: 0 10px;
     }
 
     .home-content > h3 {
@@ -807,8 +1034,21 @@ header > nav > img {
         font-size: 30px;
     }
 
+    .home-subtitle > p {
+        margin: 0.2rem 0 0 2px;
+    }
+
     .home-content > div {
         width: 100%;
+    }
+
+    .home-buttons {
+        flex-wrap: wrap;
+    }
+
+    .home-buttons > a,
+    .home-buttons > button {
+        margin-top: 8px;
     }
 
     .icons-home {
@@ -897,5 +1137,40 @@ header > nav > img {
     }
     .projects-background-details > span {
         width: 55%;
+    }
+
+    /* about me */
+    .about-me-text > h4 {
+        font-size: 25px;
+    }
+
+    .about-me-skills {
+        width: calc(100% - 20px);
+    }
+
+    .about-me-text > p {
+        font-size: 13px;
+    }
+
+    .skill-group {
+        width: 160px;
+        margin: 1rem 10px;
+    }
+
+    .skill-group > h5 {
+        font-size: 15px;
+    }
+
+    .skill-group > span {
+        font-size: 13px;
+        height: 45px;
+    }
+
+    .skill-group > span > b {
+        margin-bottom: 4px;
+    }
+
+    .skill-group > span::before {
+        width: 22px;
     }
 }
