--- a/index.css
+++ b/index.css
@@ -31,6 +31,16 @@
 
 html {
     scroll-behavior: smooth;
+    animation: scroll 3s linear;
+}
+
+@keyframes scroll {
+    from {
+        overflow-y: hidden;
+    }
+    to {
+        overflow-y: scroll;
+    }
 }
 
 * {
@@ -43,6 +53,79 @@ html {
 a {
     text-decoration: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+/* loader */
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: var(--color-background-variant);
+    animation: loader 2s linear forwards;
+}
+
+@keyframes loader {
+    0% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 1;
+    }
+    99% {
+        opacity: 0;
+        height: 100vh;
+    }
+    100% {
+        opacity: 0;
+        height: 0vh;
+    }
+}
+
+.loading-wave {
+    width: 300px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.loading-bar {
+    width: 20px;
+    height: 10px;
+    margin: 0 5px;
+    background-color: var(--color-primary);
+    border-radius: 5px;
+    animation: loading-wave-animation 1s ease-in-out infinite;
+}
+
+.loading-bar:nth-child(2) {
+    animation-delay: 0.1s;
+}
+
+.loading-bar:nth-child(3) {
+    animation-delay: 0.2s;
+}
+
+.loading-bar:nth-child(4) {
+    animation-delay: 0.3s;
+}
+
+@keyframes loading-wave-animation {
+    0% {
+        height: 10px;
+    }
+
+    50% {
+        height: 50px;
+    }
+
+    100% {
+        height: 10px;
+    }
 }
 
 header {
